--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 
+# DB
+spring.datasource.url=jdbc:postgresql://localhost:5432/todo
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
-
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-# H2-Console: http://localhost:8080/h2-console
-# jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
+
 # REST API
 spring.data.rest.base-path=/api
